<resources>
    <string name="app_name">TasksApp</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="forgot_my_password">Esqueci minha senha</string>
    <string name="register_login_screen">Não tem uma conta? Cadastre-se</string>
    <string name="label_empty_tasks">Não temos nenhuma tarefa</string>
    <string name="label_new_task_name">Nome da Tarefa</string>
    <string name="label_new_task_description">Descrição da Tarefa</string>
    <string name="subtitle_new_task_title">Nome</string>
    <string name="subtitle_new_task_description">Descrição</string>
    <string name="title_new_task">Nova Tarefa</string>
    <string name="name">Nome</string>
    <string name="to_register">Cadastrar</string>
    <string name="register">Cadastro</string>
    <string name="verification_email_message">E-mail de validação da conta enviado.\nVerificar caixa de e-mail.</string>
    <string name="resent_email">Reeviar email</string>
    <string name="tasks">Tarefas</string>
    <string name="sorted_task_list_title">Lista Ordenada</string>
    <string name="edit_task">Editar Tarefa</string>
    <string name="email_sent">Email Eviado</string>
    <string name="to_sent">Enviar</string>
    <string name="redefine_password_success_message">Email de redefinição de senha enviado com sucesso</string>
    <string name="sent_email_verification_message_success">Email de verificação enviado com sucesso</string>
    <string name="sent_email_verification_error">Erro ao enviar email de verificação</string>
    <string name="fill_field">Preencher o campo</string>
    <string name="create_account_error">Ocorreu um erro ao criar a conta. Tente novamente mais tarde</string>
    <string name="login_error">Ocorreu um erro ao fazer login. Tente novamente mais tarde</string>
    <string name="invalid_email_password">Email ou senha inválidos</string>
    <string name="redefine_password">Redefinir Senha</string>
    <string name="fail_redefine_password_message">Falha ao enviar email de redefinição de senha</string>
    <string name="email_already_used">Este email já está em uso</string>
    <string name="min_password_char_message">A senha deve ter pelo menos 6 caracteres</string>
    <string name="user_verification_error">Erro ao verificar o usuário</string>
    <string name="logoff">Sair</string>
    <string name="to_confirm">Confirmar</string>
    <string name="to_cancel">Cancelar</string>
    <string name="task_intent">task</string>
    <string name="edit_intent">edit</string>
    <string name="delete_intent">delete</string>
    <string name="edit_task_success_message">Tarefa editada com sucesso</string>
    <string name="delete_task_success_message">Tarefa excluida com sucesso</string>
    <string name="delete_task_alert_dialog_message">Deseja excluir esta tarefa?</string>
    <string name="delete_task_alert_dialog_title">Excluir Tarefa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_text_key">button_text</string>
    <string name="save">Salvar</string>
    <string name="weak_password">Senha Fraca</string>
    <string name="mid_password">Senha Média</string>
    <string name="strong_password">Senha Forte</string>
    <string name="invalid_email">E-mail Inválido</string>
    <string name="valid_email">E-mail Valido</string>
    <string name="type_valid_email">Digite um e-mail Valido</string>
    <string name="redefine_internal_password">Redefinir senha interna</string>
    <string name="redefine_internal_password_title">Redefinir Senha Interna</string>
    <string name="redefine_internal_password_success_message">Senha interna redefinida com sucesso</string>
    <string name="sorted_key">sorted_key</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="sorted_list">Lista ordenada</string>


</resources>